--- a/TBot/App.config
+++ b/TBot/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="TelegaToken" value="1419844386:AAGT-FKU2ySVJurKFOH6CUybpGR62CaNe_8"/>
-    <add key="WeatherToken" value="0471b24d1914498dad5170356202712"/>
-    <add key="OpenWeatherMapToken" value="d13c1ee555f45e0d28e355ba6eb33e80"/>
+    <add key="TelegaToken" value="your_token"/>
+    <add key="WeatherToken" value="your_token"/>
+    <add key="OpenWeatherMapToken" value="your_token"/>
     <add key="UseWeatherApi" value="OpenWeatherMapToken"/>
     <add key="Localization" value="ru"/>
   </appSettings>
